- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.4.4 WIP
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.4

Breaking Changes:
- Selectable:     changed "disabled" keyword to "enabled"

Changes:
- Examples:       Moved examples to https://github.com/Pcothren/DearPyGui-Examples

New Keywords:
- Line Series:    Added "xy_data_format" #246
- Scatter Series: Added "xy_data_format" #246
- Button:         Added "enabled"

Fixes:
- Listbox:        Fixed default "num_items"

-----------------------------------------------------------------------
 VERSION 0.4.3 (10/01/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.3

New Keywords:
- Text:              Added "source"
- Text:              Added "default_value"
- Collapsing Header: Added "open_on_double_click"
- Collapsing Header: Added "open_on_arrow"
- Collapsing Header: Added "leaf"
- Collapsing Header: Added "bullet"
- Tree Node:         Added "open_on_double_click"
- Tree Node:         Added "open_on_arrow"
- Tree Node:         Added "leaf"
- Tree Node:         Added "bullet"
- child:             Added "autosize_x"
- child:             Added "autosize_y"
- child:             Added "no_scrollbar"
- child:             Added "horizontal_scrollbar"
- child:             Added "menubar"
- input_float:       Added "step"
- input_float:       Added "step_fast"

Changes:
- Text:           Text is wrapped by default now.


Fixes:
- Collapsing Header: fixed "default_open" which did not work before
- Tree Node: fixed "default_open" which did not work before

-----------------------------------------------------------------------
 VERSION 0.4.2 (9/30/2020)
-----------------------------------------------------------------------
